# amdgpu-profile-switcher

./: Cargo.toml  README.md  amdgpu-profile-switcher.ron  proc_watch.ron
debian/: amdgpu-profile-switcher.service
src/: amdgpu_device.rs  app.rs  args.rs  config.rs  main.rs  util.rs  utils.rs
