[package]
name = "amdgpu-profile-switcher"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/Umio-Yasuno/amdgpu-profile-switcher"

[dependencies]
env_logger = "0.11.3"
libdrm_amdgpu_sys = { git = "https://github.com/Umio-Yasuno/libdrm-amdgpu-sys-rs", default-features = false, features = ["std"] }
log = "0.4.21"
proc_prog_name = { git = "https://github.com/Umio-Yasuno/proc_prog_name" }
ron = "0.8.1"
serde = { version = "1.0.201", features = ["derive"] }
