[package]
name = "amdgpu-profile-switcher"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/Umio-Yasuno/amdgpu-profile-switcher"
description = "amdgpu-profile-switcher is a simple tool that automatically switches profiles for AMDGPU."
authors = ["Umio Yasuno <coelacanth_dream@protonmail.com>"]
repository = "https://github.com/Umio-Yasuno/amdgpu-profile-switcher"

[dependencies]
env_logger = "0.11.3"
libdrm_amdgpu_sys = { git = "https://github.com/Umio-Yasuno/libdrm-amdgpu-sys-rs", default-features = false, features = ["std"] }
log = "0.4.21"
proc_prog_name = { git = "https://github.com/Umio-Yasuno/proc_prog_name" }
ron = "0.8.1"
serde = { version = "1.0.201", features = ["derive"] }

[profile.release]
opt-level = 2
strip = true
lto = true
codegen-units = 1

# cargo-deb
[package.metadata.deb]
depends = "libc6, libgcc-s1"
section = "utils"
assets = [
    ["target/release/amdgpu-profile-switcher", "usr/bin/", "755"],
    ["assets/amdgpu-profile-switcher.service", "usr/lib/systemd/system/", "644"]
]

