[package]
name = "amdgpu-profile-switcher"
version = "0.1.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/Umio-Yasuno/amdgpu-profile-switcher"
description = "amdgpu-profile-switcher is a simple tool that automatically switches profiles for AMDGPU."
authors = ["Umio Yasuno <coelacanth_dream@protonmail.com>"]
repository = "https://github.com/Umio-Yasuno/amdgpu-profile-switcher"

[dependencies]
env_logger = { version = "0.11.3", default-features = false }
libdrm_amdgpu_sys = { git = "https://github.com/Umio-Yasuno/libdrm-amdgpu-sys-rs" }
log = "0.4.21"
proc_prog_name = { git = "https://github.com/Umio-Yasuno/proc_prog_name" }
ron = "0.8.1"
serde = { version = "1.0.201", features = ["derive"] }

[profile.release]
opt-level = 2
strip = true
lto = true
codegen-units = 1

# cargo-deb
[package.metadata.deb]
depends = "libc6, libgcc-s1"
section = "utils"
extended-description = """\
`amdgpu-profile-switcher` is a simple tool that automatically switches profiles for AMDGPU.  
The tool switches between perf level (`power_dpm_force_performance_level`) and power_profile (`pp_power_profile_mode`) depending on the process program name. (requires root privileges)"""
assets = [
    ["target/release/amdgpu-profile-switcher", "usr/bin/", "755"],
]
maintainer-scripts = "debian/"
systemd-units = { enable = false }

# cargo-generate-rpm
[package.metadata.generate-rpm]
summary = """\
`amdgpu-profile-switcher` is a simple tool that automatically switches profiles for AMDGPU.  
The tool switches between perf level (`power_dpm_force_performance_level`) and power_profile (`pp_power_profile_mode`) depending on the process program name. (requires root privileges)"""
assets = [
    { source = "target/release/amdgpu-profile-switcher", dest = "/usr/bin/", mode = "755" },
    { source = "debian/amdgpu-profile-switcher.service", dest = "/lib/systemd/system/", mode = "644" },
]
